# DiffusionSim

./: .gitignore  README.md
cpp/: CMakeLists.txt  point_locality.cpp
data/: collision_data.txt  data_format.txt  wierner_data.txt
python/: datagen.py  examples.py  main.py  query_simulation.py  segment_tree.py  sim_data.py  simdata.py  simulation.py
